just some prettying up

--- a/index.html
+++ b/index.html
@@ -99,15 +99,19 @@ textarea {
   padding: 40px 50px 80px 50px; }
 
 .title, .subtitle {
-  font-size: 2.30em;
-  margin: 0.45em 0;
+  font-size: 3.30em;
+  margin: 0;
+  font-weight: 100;
   background: none;
-  line-height: 1.65;
+  line-height: 1.25;
   font-family: 'Equity-Text-B', serif;
   text-align: justify; 
 }
+.title{
+  margin-bottom: 10px;
+}
 .subtitle {
-  font-size: 1.20em;
+  font-size: 24px;
   font-family: georgia;
 }
 
@@ -116,7 +120,9 @@ textarea {
   font-weight: 100;
   background: none;
   font-family: Calibri, Arial, helvetica, sans-serif;
-  text-align: justify; 
+  text-align: justify;
+  font-size: 18px;
+  margin-bottom:10px;
 }
 
 .last-edited {
