About Page Example

--- a/about.htm
+++ b/about.htm
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Save As HTML File</title>
-  <meta name="robots" content="noindex">
-
-  <!-- New Site Styles -->
-  <style>
+<!DOCTYPE html><head><title>About</title><style>
 .clearfix:after, .quick-utility-links:after {
   content: "";
   display: table;
@@ -152,56 +143,6 @@ textarea {
     color:#bbb;
     padding: 5px 10px;
   }
-  </style>
+  </style></head><body><div class="background-image" style="background: url(http://amazingpics.net/content/Abstract/Abstract%20Art%20396.jpg) 50% 50% / cover no-repeat fixed;"></div><ul class="navigation" id="navigation"><li><a href="home.htm">Home</a></li><li><a href="about.htm">About</a></li></ul><div class="notes-container"><div class="content-container"><h1 class="title">About</h1><h2 class="subtitle">Canadian Bank Note</h2><div class="message">Bacon ipsum dolor amet biltong t-bone capicola jowl chicken salami shoulder meatball pork chop ball tip turducken. Spare ribs strip steak t-bone, fatback meatball shank tongue swine bresaola salami shoulder chuck pork belly bacon. Turkey shank ground round short loin turducken jowl andouille boudin porchetta cupim. Salami beef chicken tail beef ribs.</div><div class="message">Bacon ipsum dolor amet biltong t-bone capicola jowl chicken salami shoulder meatball pork chop ball tip turducken. Spare ribs strip steak t-bone, fatback meatball shank tongue swine bresaola salami shoulder chuck pork belly bacon. Turkey shank ground round short loin turducken jowl andouille boudin porchetta cupim. Salami beef chicken tail beef ribs.</div><div class="message">Bacon ipsum dolor amet biltong t-bone capicola jowl chicken salami shoulder meatball pork chop ball tip turducken. Spare ribs strip steak t-bone, fatback meatball shank tongue swine bresaola salami shoulder chuck pork belly bacon. Turkey shank ground round short loin turducken jowl andouille boudin porchetta cupim. Salami beef chicken tail beef ribs.</div><h2 class="subtitle">Steak Bacon Spare Rib</h2><div class="message">Bacon ipsum dolor amet biltong t-bone capicola jowl chicken salami shoulder meatball pork chop ball tip turducken. Spare ribs strip steak t-bone, fatback meatball shank tongue swine bresaola salami shoulder chuck pork belly bacon. Turkey shank ground round short loin turducken jowl andouille boudin porchetta cupim. Salami beef chicken tail beef ribs.
 
-  <!-- Edit Styles Only -->
-  <style>
-  #layout-controls{
-    position:relative;
-    z-index: 10;
-  }
-  .content-block{
-    position:relative;
-  }
-  .block-controls{
-    position:absolute;
-    z-index: 10;
-    left: -100px;
-    top: 0;
-  }
-  textarea{
-    color:#3d3d3d;
-  }
-  textarea.subtitle{
-    margin-bottom: 0;
-  }
-  </style>
-</head>
-
-<body>
-  
-  <div id="layout-controls">
-    <button control="title">New Title</button>
-    <button control="subtitle">New SubTitle</button>
-    <button control="message">New Section</button>
-    <button id="save">Save</button>
-  </div>
-
-  <div id="background" class="background-image" style="background: url(http://amazingpics.net/content/Abstract/Abstract%20Art%20396.jpg) 50% 50% / cover no-repeat fixed;"></div>
-  <ul id="navigation" class="navigation"></ul>
-  <div class="notes-container">
-    <form id="content-container" view="content-container" class="content-container" onsubmit="return false">
-    </form>
-  </div>
-
-<script src='http://brandonbrule.github.io/itsa/js/itsa.js'></script>
-<script src="js/helpers.js"></script>
-<script src="js/save-as-file.js"></script>
-<script src="js/exporter.js"></script>
-<script src="js/layout-controls.js"></script>
-<script src="js/nav/config.js"></script>
-<script src="js/nav/navigation.js"></script>
-</body>
-
-
-</html>
+Bacon ipsum dolor amet biltong t-bone capicola jowl chicken salami shoulder meatball pork chop ball tip turducken. Spare ribs strip steak t-bone, fatback meatball shank tongue swine bresaola salami shoulder chuck pork belly bacon. Turkey shank ground round short loin turducken jowl andouille boudin porchetta cupim. Salami beef chicken tail beef ribs.</div></div></div></body/>
